--- a/eas.json
+++ b/eas.json
@@ -2,12 +2,18 @@
     "build": {
       "development": {
         "developmentClient": true,
-        "distribution": "internal"
+        "distribution": "internal",
+        "android": {
+          "buildType": "apk"
+        }
       },
       "preview": {
         "distribution": "internal"
       },
-      "production": {}
+      "production": {"android": {
+        "buildType": "apk"
+      }}
     }
+
   }
   
