react-native-cli

--- a/app.json
+++ b/app.json
@@ -1,36 +1,4 @@
 {
-  "expo": {
-    "name": "interview-task",
-    "slug": "react-task",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.haaroonk09.reacttask"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "af49b184-a5d3-48e1-9d5a-e732e2a1c6a4"
-      }
-    }
-  }
+  "name": "reactTask",
+  "displayName": "reactTask"
 }
